Fixed bug: step 5 list label position wrong if opened more than 1; Fixed bug: in mobile version wrapped step label; Fixed  bug: after showing list, step header is moved; Implemented remove "please" in labels; TODO update;

--- a/Floem_AppClient/src/app/app-core/form/form.component.css
+++ b/Floem_AppClient/src/app/app-core/form/form.component.css
@@ -42,7 +42,6 @@ ng-toggle {
 
 mat-button-toggle-group {
   flex-wrap: wrap;
-  margin-bottom: 20px;
 }
 
 .toggleText {
@@ -58,10 +57,11 @@ mat-button-toggle-group {
 
 .animatedAppearance {
   transition: all 0.3s;
+  margin-top: 30px;
 }
 
 .selectLabel {
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   height: 20px;
 }
 
